feat: add style for express

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,10 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Express</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-  <h1>О нас</h1>
+  <%- include('block/header') -%>
+  <main>
+    <h1>About us</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero deleniti voluptatem architecto eos placeat quos sint quidem, veritatis impedit recusandae dolorem, non sequi qui reprehenderit odit dolor assumenda ipsa doloribus!</p>
+  </main>
 </body>
 
 </html>
