--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,22 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Express</title>
+  <link rel="stylesheet" href="/css/main.css">
+
 </head>
 
 <body>
-  <h1>User</h1>
-  <p>Имя пользователя: <%= name %>
-  </p>
-  <% if(name.toLowerCase()=='alex' ) { %>
-    <p>Хобби:</p>
-    <ul>
-      <% hobbies.forEach((el)=> { %>
-        <li>
-          <%= el %>
-        </li>
-        <%})%>
-    </ul>
-    <% } %>
+  <%- include('block/header') -%>
+
+    <h1>User</h1>
+    <p>Имя пользователя: <%= name %>
+    </p>
+    <% if(name.toLowerCase()=='alex' ) { %>
+      <p>Хобби:</p>
+      <ul>
+        <% hobbies.forEach((el)=> { %>
+          <li>
+            <%= el %>
+          </li>
+          <%})%>
+      </ul>
+      <% } %>
 </body>
 
 </html>
