--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Express</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-  <h1>Главная страница</h1>
+  <%- include('block/header') -%>
+    <h1>Главная страница</h1>
 </body>
 
 </html>
