feat: add work with form

--- a/views/block/header.ejs
+++ b/views/block/header.ejs
@@ -4,8 +4,8 @@
     <a href="/">Main</a>
     <a href="/about">About</a>
   </nav>
-  <form>
-    <input type="text" placeholder="name">
-    <button>Search</button>
+  <form method="post" action="/check-user">
+    <input type="text" placeholder="username" name="username">
+    <button type="submit">Search</button>
   </form>
 </header>
