--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,12 @@
 
 <body>
   <%- include('block/header') -%>
-    <h1>Главная страница</h1>
+    <main>
+      <h1>Главная страница</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos culpa, voluptate hic sed ad repellendus? Iure
+        corrupti, obcaecati sequi, error incidunt sunt alias omnis accusamus atque repellendus, corporis eligendi harum.
+      </p>
+    </main>
 </body>
 
 </html>
